# Impala

./: CMakeLists.txt  buildall.sh
be/: CMakeLists.txt
be/src/benchmarks/: CMakeLists.txt  hash-benchmark.cc  simd-demo.cc
be/src/catalog/: catalog-server.cc  catalog-server.h  catalogd-main.cc
be/src/codegen/: instruction-counter.cc  llvm-codegen-test.cc  llvm-codegen.cc  llvm-codegen.h
be/src/common/: logging.cc  names.h  object-pool.h  status.cc
be/src/exec/: aggregation-node.h  analytic-eval-node.h  blocking-join-node.cc  blocking-join-node.h  catalog-op-executor.cc  catalog-op-executor.h  cross-join-node.h  data-sink.cc  data-sink.h  data-source-scan-node.cc  data-source-scan-node.h  exchange-node.cc  exchange-node.h  exec-node.cc  exec-node.h  hash-join-node.cc  hash-join-node.h  hash-table.cc  hash-table.h  hash-table.inline.h  hbase-scan-node.cc  hbase-scan-node.h  hbase-table-scanner.cc  hbase-table-scanner.h  (+40 more)
be/src/service/: CMakeLists.txt  child-query.cc  child-query.h  fe-support.cc  fragment-exec-state.cc  fragment-exec-state.h  fragment-mgr.cc  fragment-mgr.h  hs2-util.cc  impala-beeswax-server.cc  impala-hs2-server.cc  impala-internal-service.h  impala-server-callbacks.cc  impala-server.cc  impala-server.h  query-exec-state.cc  query-exec-state.h  query-options.cc  query-options.h  session-expiry-test.cc
cmake_modules/: FindAvro.cmake  FindGFlags.cmake  FindGLog.cmake  FindGTest.cmake  FindHDFS.cmake  FindLdap.cmake  FindLlvm.cmake  FindLz4.cmake  FindOpenSSL.cmake  FindPICLibs.cmake  FindPProf.cmake  FindRapidJson.cmake  FindRe2.cmake  FindSasl.cmake  FindSnappy.cmake
common/thrift/: CMakeLists.txt  CatalogObjects.thrift  DebugOptions.thrift  Descriptors.thrift  ImpalaInternalService.thrift  ImpalaService.thrift  Metrics.thrift  PlanNodes.thrift  Planner.thrift  Types.thrift  generate_metrics.py  metrics.json
shell/: impala_shell.py  option_parser.py
tests/common/: impala_test_suite.py
tests/query_test/: test_lifecycle.py  test_tpcds_queries.py  test_tpch_queries.py
www/: all_child_groups.tmpl  metric_group.tmpl  queries.tmpl  query_detail_tabs.tmpl
(+199 files in other folders)
